# ball_pyramid_puzzle

./: CMakeLists.txt  LICENSE  README.md  _config.yml  puzzle.cpp
_layouts/: default.html
src/: CMakeLists.txt  puzzle.cpp
